# bcsv

./: .clang-format  .clangd  .claude.md  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  Bitset_Alignment_Optimization_Plan.md  CHANGELOG.md  CLI_TOOLS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE.md  Implementation_Visit()_Function.MD  LICENSE  LICENSE.md  Modify_Row_and_Layout_to_not_use_std_variants.md  OWNERSHIP_SEMANTICS.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_RESULTS.md  README.md  SECURITY.md  SKILLS.md  ToDo.md  ToDo.txt  VERSIONING.md  package.json  plan.md  plan_1.5.10.md  review.md  review_2026-07-11.md  session-ses_0ecb.md  test_bitset_structure.cpp  test_compression_levels.cpp
.github/: copilot-instructions.md
benchmark/: .gitignore  BENCHMARK_PLAN.md  CMakeLists.txt  OPERATOR_GUIDE.md  README.md  REFERENCE_WORKLOADS.md  SKILLS.md  benchmark_large.cpp  benchmark_performance.cpp  build_and_run.py  compare_runs.py  fetch_reference_datasets.py  interleaved_compare.py  operator_summary.py  prepare_benchmark_worktree.py  reference_workloads.json  report.py  report_generator.py  rerun_comparison.sh  run.py  run_benchmarks.py  run_interleaved_pairs.py  run_parallel_8.sh
benchmark/lib/: __init__.py  aggregation.py  constants.py  discovery.py  platform_info.py  runner.py
benchmark/src/: bench_c_api.cpp  bench_codec_compare.cpp  bench_common.hpp  bench_datasets.hpp  bench_direct_access.cpp  bench_external_csv.cpp  bench_generate_csv.cpp  bench_macro_datasets.cpp  bench_micro_bitset.cpp  bench_micro_types.cpp  bench_sampler.cpp  bench_static_layouts.hpp
cmake/: GetGitVersion.cmake  version.h.in
csharp/: README.md
docs/: API_OVERVIEW.md  BINDING_CONSISTENCY.md  BUG_REPORT_DirectAccess.md  ERROR_HANDLING.md  INTEROPERABILITY.md  ITEM_11_PLAN.md  ITEM_11_PLAN_Feedback.md  LEAN_CHECKLIST.md  PHASE1_CSV_REPORT.md  PHASE3_DELTA_REPORT.md  THREAD_SAFETY.md  bcsvCast_PLAN.md  bcsvCast_SPEC.md  bcsv_sampler_codex5.3.md  bcsv_sampler_codex5.3_opus4.6.md  bcsv_sampler_gemini3.1.md  bcsv_sampler_gemini3.1_opus4.6.md  bcsv_sampler_opus4.6.md  bcsv_sampler_opus4.6_codex5.3.md  bcsv_sampler_opus4.6_gemini3.1.md  bcsv_sampler_plan_claudeOpus4.6.md  v1.3.0_STREAMING_LZ4_PLAN.md
examples/: CLI_TOOLS.md  CMakeLists.txt  FINAL_LZ4_COMPARISON.md  LZ4_PERFORMANCE_COMPARISON.md  PERFORMANCE_COMPARISON.md  README.md  SKILLS.md  bcsv2csv.cpp  bcsv2csv.md  bcsvGenerator.cpp  bcsvGenerator.md  bcsvHead.cpp  bcsvHead.md  bcsvHeader.cpp  bcsvSampler.cpp  bcsvTail.cpp  bcsvTail.md  c_api_vectorized_example.c  compare_lz4_performance.ps1  comprehensive_lz4_comparison.ps1  compression_streaming_demo.cpp  csv2bcsv.cpp  csv2bcsv.md  csv_format_utils.h  example.cpp  example_delta.cpp  example_direct_access.cpp  example_error_handling.cpp  example_sampler.cpp  example_static.cpp  example_zoh.cpp  example_zoh_static.cpp  large_scale_benchmark.cpp  lz4_independent_blocks_example.cpp  lz4_raw_streaming_example.cpp  lz4_streaming_file_example.cpp  performance_benchmark.cpp  quickstart.cpp  simple_example.cpp  visitor_examples.cpp
python/: BUILD_NOTES.md  CMakeLists.txt  MANIFEST.in  README.md  SKILLS.md  demo.py  pyproject.toml  setup.py  sync_headers.py
python/.github/workflows/: build-and-publish.yml
python/benchmarks/: README.md  run_pybcsv_benchmarks.py
python/examples/: README.md  advanced_usage.py  basic_usage.py  pandas_integration.py  performance_benchmark.py
python/include/bcsv/: csv_reader.hpp  csv_writer.hpp  row.hpp
python/pybcsv/: __init__.py  __init__.pyi  __version__.py  _bcsv.pyi  bindings.cpp  pandas_utils.py  pandas_utils_original.py  parquet_utils.py  polars_utils.py  py.typed  tools.py
python/tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  run_all_tests.py  run_tests.py  test_all_optimizations.py  test_basic.py  test_basic_functionality.py  test_count_rows.py  test_csv_writer_reader.py  test_cycle4_python_hardening.py  test_data_types.py  test_error_handling.py  test_error_handling_edge_cases.py  test_interoperability.py  test_minimal_string.py  test_optimizations.py  test_pandas.py  test_pandas_integration.py  test_parquet_conversion.py  test_performance_edge_cases.py  test_pybcsv_arrow.py  test_pybcsv_codecs.py  test_pybcsv_columnar.py  test_pybcsv_core.py  test_pybcsv_direct_access.py  test_pybcsv_errors.py  test_pybcsv_pandas.py  test_pybcsv_performance.py  test_pybcsv_polars.py  test_pybcsv_sampler.py  test_streaming_bindings.py  test_tools.py
scripts/: check_pinvoke_parity.py  check_python_c_api_sync.py  (+4 more)
src/tools/: CLI_TOOLS.md  CMakeLists.txt  SKILLS.md  bcsv2csv.cpp  bcsv2csv.md  bcsvCast.cpp  bcsvCompare.cpp  bcsvGenerator.cpp  bcsvGenerator.md  bcsvHead.cpp  bcsvHead.md  bcsvHeader.cpp  bcsvHeader.md  bcsvNarrowType.cpp  bcsvRepair.cpp  bcsvSampler.cpp  bcsvSampler.md  bcsvTail.cpp  bcsvTail.md  bcsvValidate.cpp  bcsvValidate.md  cli_app.h  cli_common.h  csv2bcsv.cpp  csv2bcsv.md  spec_parse.h  type_probe.h
tests/: CMakeLists.txt  PERFORMANCE_COMPARISON.md  README.md  SKILLS.md  basic_test.cpp  basic_test_new.cpp  batch_codec_recovery_test.cpp  bcsv_c_api_full_test.c  bcsv_c_api_row_test.c  bcsv_c_api_test.c  bcsv_comprehensive_test.cpp  bcsv_coverage_gaps_test.cpp  bench_common.hpp  bench_dataset_profiles_test.cpp  bench_datasets.hpp  bench_macro_datasets.cpp  bench_micro_types.cpp  benchmark_large.cpp  benchmark_performance.cpp  bitset_test.cpp  clean_test.cpp  codec_dispatch_test.cpp  csv_reader_writer_test.cpp  direct_access_test.cpp  error_handling_test.cpp  file_codec_test.cpp  file_footer_test.cpp  file_header_byte_buffer_test.cpp  file_index_test.cpp  format_hardening_test.cpp  layout_guard_test.cpp  layout_sync_test.cpp  lz4_stream_test.cpp  lz4_stress_test.cpp  nan_inf_test.cpp  packet_header_v3_test.cpp  repair_test.cpp  review_fixes_test.cpp  row_codec_delta001_test.cpp  row_codec_delta002_test.cpp  (+18 more)
tests/integration/: conftest.py  helpers.py  test_cast.py  test_cli_tools.py  test_compare.py  test_narrow_type.py  test_parquet_tools.py  test_sampler.py  test_validate.py
(+185 files in other folders)
